--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "parking_app_backend",
   "main": "parkingBackend.js",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "node app.js",
+    "start": "node app.js"
   },
   "keywords": [
     "parking"
