--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
 
 
-DATABASE_URL="mysql://zaki:Zaki7402@localhost:3306/parkingDB?schema=public"
+MYSQL_ADDON_URI="mysql://zaki:Zaki7402@localhost:3306/parkingDB?schema=public"
