--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "projet_backend",
   "version": "1.0.0",
   "description": "parking_app_backend",
-  "main": "parkingBackend.js",
+  "main": "app.js",
   "scripts": {
     "dev": "node app.js",
-    "start": "node app.js"
+    "install": "npx prisma migrate"
   },
   "keywords": [
     "parking"
