--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "node app.js",
-    "install": "npx prisma migrate"
+    "install": "npx prisma migrate deploy"
   },
   "keywords": [
     "parking"
