--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PORT = 8080
 
 
 MYSQL_ADDON_URI="mysql://zaki:Zaki7402@localhost:3306/parkingDB?schema=public"
+
+DATABASE_URL="mysql://zaki:Zaki7402@localhost:3306/parkingDB?schema=public"
