--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 8080
 
 
-MYSQL_ADDON_URI="mysql://zaki:Zaki7402@localhost:3306/parkingDB?schema=public"
+MYSQL_ADDON_URI="mysql://ugui7hvp78dgmipd:Oc6Ilcv7CgSPAzfJXQNo@bdc89sg0gaqlxjsnttld-mysql.services.clever-cloud.com:3306/bdc89sg0gaqlxjsnttld"
 
-DATABASE_URL="mysql://zaki:Zaki7402@localhost:3306/parkingDB?schema=public"
+DATABASE_URL="mysql://ugui7hvp78dgmipd:Oc6Ilcv7CgSPAzfJXQNo@bdc89sg0gaqlxjsnttld-mysql.services.clever-cloud.com:3306/bdc89sg0gaqlxjsnttld"
